--- a/Master Chemistry/academicSearcher/academicSearcher.css
+++ b/Master Chemistry/academicSearcher/academicSearcher.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Orbitron', sans-serif;
   background-color: #0d0d0d;
   color: yellow;
-  background-image: url("Yellow.JPG");
+  background-image: url("Yellow.png");
   padding: 20px;
   margin: 0;
 }
