--- a/Master Chemistry/elementSearcher/elementSearcher.css
+++ b/Master Chemistry/elementSearcher/elementSearcher.css
@@ -10,7 +10,7 @@ body {
   color: #ffffff;
   margin: 0;
   padding: 20px;
-  background-image: url("Orange.JPG");
+  background-image: url("Orange.png");
 }
 
 h1 {
