--- a/Master Chemistry/randomGroup/randomGroup.css
+++ b/Master Chemistry/randomGroup/randomGroup.css
@@ -1,7 +1,7 @@
 /* General Body Styling */
 body {
   font-family: 'Orbitron', sans-serif;
-  background-image: url("Green.JPG");
+  background-image: url("Green.png");
   color: #00ff00;
   margin: 0;
   padding: 20px;
