--- a/Master Chemistry/gradeCalc/gradeCalc.css
+++ b/Master Chemistry/gradeCalc/gradeCalc.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-image: url("Purple.JPG");
+    background-image: url("Purple.png");
     color: #e6b3ff;
     margin: 0;
     padding: 20px;
