--- a/Master Chemistry/periodicTable/periodicTable.css
+++ b/Master Chemistry/periodicTable/periodicTable.css
@@ -10,7 +10,7 @@ body {
   color: #ffffff;
   margin: 0;
   padding: 20px;
-  background-image: url("Red.JPG");
+  background-image: url("Red.png");
 }
 
 .title {
@@ -60,14 +60,14 @@ body {
   width: 100%;
   padding: 10px; 
   border-radius: 4px;
-  background: #6fd649;
+  background: #ff4242;
   color: #fff;
   font-size: 20px;
   cursor: pointer; 
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s ease-in-out;
 }
-.button:hover{background-color: #56ab37;}
+.button:hover{background-color: #962828;}
 
 #topSymbol{
   border: 2px solid black;
